# GraphCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  big_n_little_p.gml  black-hole.gml  cycle.gml  little_n_big_p.gml  little_n_little_p.gml  middle_n_middle_p.gml  star.gml
.github/workflows/: Graph-list.yml  Graph-matrix.yml  cmake-run-supra-random.yml  cmake-single-platform.yml
graph-list-results/: big_n_little_p.gml  black-hole.gml  cycle.gml  little_n_big_p.gml  little_n_little_p.gml  middle_n_middle_p.gml  star.gml
graph-matrix-results/: big_n_little_p.gml  black-hole.gml  cycle.gml  little_n_big_p.gml  little_n_little_p.gml  middle_n_middle_p.gml  star.gml
include/: Args.hpp  Constants.hpp  GmlFile.hpp  Graph.h  ListGraph.h  ListGraph.hpp  LogColor.hpp  Logger.hpp  Matrix.h  Matrix.hpp  MatrixGraph.h  MatrixGraph.hpp  Utils.hpp  utils.h  utils.hpp
src/: Graph.cpp  ListGraph.cpp  Logger.cpp  Matrix.cpp  MatrixGraph.cpp  Utils.cpp  main.cpp
tests/: CMakeLists.txt  MatrixTest.cpp  graphListTest.cpp  graphMatrixTest.cpp  graphTest.cpp
